{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 102,
  "lineage": "33971ec8-fbae-9435-a46d-6c95e582cff4",
  "resources": [
    {
      "module": "module.compute_app",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "app_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2204-jammy-v20260504",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 20,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/todo-app-496222/zones/us-central1-a/disks/jenkins-project-dev-app-instance"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "environment": "dev",
              "managed_by": "terraform",
              "module": "compute",
              "name": "jenkins-project-dev-app-instance",
              "project": "jenkins-project",
              "role": "app"
            },
            "enable_display": false,
            "id": "projects/todo-app-496222/zones/us-central1-a/instances/jenkins-project-dev-app-instance",
            "instance_id": "1841122036079575744",
            "label_fingerprint": "yOPglyQoR_M=",
            "labels": {
              "environment": "dev",
              "managed_by": "terraform",
              "module": "compute",
              "name": "jenkins-project-dev-app-instance",
              "project": "jenkins-project",
              "role": "app"
            },
            "machine_type": "e2-micro",
            "metadata": {
              "enable-oslogin": "TRUE"
            },
            "metadata_fingerprint": "L67OUkgyy3s=",
            "name": "jenkins-project-dev-app-instance",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.60.13.8",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/todo-app-496222/global/networks/jenkins-project-network-dev",
                "network_ip": "10.0.0.3",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/todo-app-496222/regions/us-central1/subnetworks/jenkins-project-public-subnet-dev",
                "subnetwork_project": "todo-app-496222"
              }
            ],
            "project": "todo-app-496222",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/todo-app-496222/zones/us-central1-a/instances/jenkins-project-dev-app-instance",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "app",
              "terraform"
            ],
            "tags_fingerprint": "5aOQYfglruQ=",
            "terraform_labels": {
              "environment": "dev",
              "managed_by": "terraform",
              "module": "compute",
              "name": "jenkins-project-dev-app-instance",
              "project": "jenkins-project",
              "role": "app"
            },
            "zone": "us-central1-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "module.compute_app.data.google_secret_manager_secret_version.ansible_pub_key",
            "module.iam.google_service_account.ansible",
            "module.vpc.google_compute_network.main",
            "module.vpc.google_compute_subnetwork.public"
          ]
        }
      ]
    },
    {
      "module": "module.compute_jenkins",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "app_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2204-jammy-v20260504",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 20,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/todo-app-496222/zones/us-central1-a/disks/jenkins-project-dev-jenkins-instance"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "environment": "dev",
              "managed_by": "terraform",
              "module": "compute",
              "name": "jenkins-project-dev-jenkins-instance",
              "project": "jenkins-project",
              "role": "jenkins"
            },
            "enable_display": false,
            "id": "projects/todo-app-496222/zones/us-central1-a/instances/jenkins-project-dev-jenkins-instance",
            "instance_id": "7391691633444176578",
            "label_fingerprint": "f3hpKlhPUYk=",
            "labels": {
              "environment": "dev",
              "managed_by": "terraform",
              "module": "compute",
              "name": "jenkins-project-dev-jenkins-instance",
              "project": "jenkins-project",
              "role": "jenkins"
            },
            "machine_type": "e2-medium",
            "metadata": {
              "enable-oslogin": "TRUE"
            },
            "metadata_fingerprint": "L67OUkgyy3s=",
            "name": "jenkins-project-dev-jenkins-instance",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "146.148.62.133",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/todo-app-496222/global/networks/jenkins-project-network-dev",
                "network_ip": "10.0.0.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/todo-app-496222/regions/us-central1/subnetworks/jenkins-project-public-subnet-dev",
                "subnetwork_project": "todo-app-496222"
              }
            ],
            "project": "todo-app-496222",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/todo-app-496222/zones/us-central1-a/instances/jenkins-project-dev-jenkins-instance",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "jenkins",
              "terraform"
            ],
            "tags_fingerprint": "JIhp9kPq6to=",
            "terraform_labels": {
              "environment": "dev",
              "managed_by": "terraform",
              "module": "compute",
              "name": "jenkins-project-dev-jenkins-instance",
              "project": "jenkins-project",
              "role": "jenkins"
            },
            "zone": "us-central1-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "module.compute_jenkins.data.google_secret_manager_secret_version.ansible_pub_key",
            "module.iam.google_service_account.ansible",
            "module.vpc.google_compute_network.main",
            "module.vpc.google_compute_subnetwork.public"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "8000"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-05-15T13:03:33.122-07:00",
            "deny": [],
            "description": "Allow FastAPI application traffic",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/todo-app-496222/global/firewalls/jenkins-project-dev-allow-app",
            "log_config": [],
            "name": "jenkins-project-dev-allow-app",
            "network": "https://www.googleapis.com/compute/v1/projects/todo-app-496222/global/networks/jenkins-project-network-dev",
            "priority": 1000,
            "project": "todo-app-496222",
            "self_link": "https://www.googleapis.com/compute/v1/projects/todo-app-496222/global/firewalls/jenkins-project-dev-allow-app",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "app"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.google_compute_network.main"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "8080"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-05-15T13:03:33.394-07:00",
            "deny": [],
            "description": "Allow Jenkins access from specific IPs",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/todo-app-496222/global/firewalls/jenkins-project-dev-allow-jenkins",
            "log_config": [],
            "name": "jenkins-project-dev-allow-jenkins",
            "network": "https://www.googleapis.com/compute/v1/projects/todo-app-496222/global/networks/jenkins-project-network-dev",
            "priority": 1000,
            "project": "todo-app-496222",
            "self_link": "https://www.googleapis.com/compute/v1/projects/todo-app-496222/global/firewalls/jenkins-project-dev-allow-jenkins",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "jenkins"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.google_compute_network.main"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "creation_timestamp": "2026-05-15T13:03:33.806-07:00",
            "deny": [],
            "description": "Allow all outbound traffic",
            "destination_ranges": [
              "0.0.0.0/0"
            ],
            "direction": "EGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/todo-app-496222/global/firewalls/jenkins-project-dev-allow-outbound",
            "log_config": [],
            "name": "jenkins-project-dev-allow-outbound",
            "network": "https://www.googleapis.com/compute/v1/projects/todo-app-496222/global/networks/jenkins-project-network-dev",
            "priority": 1000,
            "project": "todo-app-496222",
            "self_link": "https://www.googleapis.com/compute/v1/projects/todo-app-496222/global/firewalls/jenkins-project-dev-allow-outbound",
            "source_ranges": [],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.google_compute_network.main"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_postgresql",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "5432"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-05-15T13:03:33.255-07:00",
            "deny": [],
            "description": "Allow PostgreSQL from app servers only",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/todo-app-496222/global/firewalls/jenkins-project-dev-allow-postgresql",
            "log_config": [],
            "name": "jenkins-project-dev-allow-postgresql",
            "network": "https://www.googleapis.com/compute/v1/projects/todo-app-496222/global/networks/jenkins-project-network-dev",
            "priority": 1000,
            "project": "todo-app-496222",
            "self_link": "https://www.googleapis.com/compute/v1/projects/todo-app-496222/global/firewalls/jenkins-project-dev-allow-postgresql",
            "source_ranges": [],
            "source_service_accounts": [],
            "source_tags": [
              "app"
            ],
            "target_service_accounts": [],
            "target_tags": [
              "database"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.google_compute_network.main"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-05-15T13:03:33.392-07:00",
            "deny": [],
            "description": "Allow SSH access for management",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/todo-app-496222/global/firewalls/jenkins-project-dev-allow-ssh",
            "log_config": [],
            "name": "jenkins-project-dev-allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/todo-app-496222/global/networks/jenkins-project-network-dev",
            "priority": 1000,
            "project": "todo-app-496222",
            "self_link": "https://www.googleapis.com/compute/v1/projects/todo-app-496222/global/firewalls/jenkins-project-dev-allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "app",
              "jenkins"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.google_compute_network.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "description": "Network for jenkins-project dev",
            "enable_ula_internal_ipv6": false,
            "id": "projects/todo-app-496222/global/networks/jenkins-project-network-dev",
            "mtu": 0,
            "name": "jenkins-project-network-dev",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "numeric_id": "8896862862197834470",
            "project": "todo-app-496222",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/todo-app-496222/global/networks/jenkins-project-network-dev"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "google_compute_router",
      "name": "router",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "bgp": [
              {
                "advertise_mode": "DEFAULT",
                "asn": 64514,
                "keepalive_interval": 20
              }
            ],
            "creation_timestamp": "2026-05-15T13:03:33.723-07:00",
            "encrypted_interconnect_router": false,
            "id": "projects/todo-app-496222/regions/us-central1/routers/jenkins-project-router-dev",
            "name": "jenkins-project-router-dev",
            "network": "https://www.googleapis.com/compute/v1/projects/todo-app-496222/global/networks/jenkins-project-network-dev",
            "project": "todo-app-496222",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/todo-app-496222/regions/us-central1/routers/jenkins-project-router-dev"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.google_compute_network.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_network_tier": "PREMIUM",
            "enable_dynamic_port_allocation": false,
            "enable_endpoint_independent_mapping": false,
            "endpoint_types": [
              "ENDPOINT_TYPE_VM"
            ],
            "icmp_idle_timeout_sec": 30,
            "id": "todo-app-496222/us-central1/jenkins-project-router-dev/jenkins-project-nat-dev",
            "log_config": [
              {
                "enable": true,
                "filter": "ERRORS_ONLY"
              }
            ],
            "max_ports_per_vm": 0,
            "min_ports_per_vm": 0,
            "name": "jenkins-project-nat-dev",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "todo-app-496222",
            "region": "us-central1",
            "router": "jenkins-project-router-dev",
            "source_subnetwork_ip_ranges_to_nat": "ALL_SUBNETWORKS_ALL_IP_RANGES",
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_time_wait_timeout_sec": 120,
            "tcp_transitory_idle_timeout_sec": 30,
            "udp_idle_timeout_sec": 30
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.google_compute_network.main",
            "module.vpc.google_compute_router.router"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2026-05-15T13:03:33.742-07:00",
            "gateway_address": "10.0.0.1",
            "id": "projects/todo-app-496222/regions/us-central1/subnetworks/jenkins-project-public-subnet-dev",
            "ip_cidr_range": "10.0.0.0/18",
            "log_config": [
              {
                "aggregation_interval": "INTERVAL_5_SEC",
                "filter_expr": "true",
                "flow_sampling": 0.5,
                "metadata": "INCLUDE_ALL_METADATA"
              }
            ],
            "name": "jenkins-project-public-subnet-dev",
            "network": "https://www.googleapis.com/compute/v1/projects/todo-app-496222/global/networks/jenkins-project-network-dev",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "todo-app-496222",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/todo-app-496222/regions/us-central1/subnetworks/jenkins-project-public-subnet-dev",
            "stack_type": "IPV4_ONLY"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.google_compute_network.main"
          ]
        }
      ]
    }
  ]
}